--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Greeting App</title>
 </head>
 <body>
-    <h1>Test1</h1>
+    <h1>Test1 - Now with LB!</h1>
     <form id="greetForm">
         <label for="name">Enter your name:</label>
         <input type="text" id="name" name="name" required>
