--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container" style="min-width:400px">
         <div class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <span class="navbar-brand mb-0 h1">Pictorial Translator</span>
+            <span class="navbar-brand mb-0 h1">BIG CHANGE IN UI</span>
         </div>
         <div class="mt-3">
             <p><b>Upload</b></p>
